[tool.poetry]
name = "Filtration_Surfaces"
version = "0.1.0"
description = ""
authors = ["Franz Srambical <franz.srambical@helmholtz-munich.de>"]

[tool.poetry.dependencies]
python = "^3.6.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
tqdm = "^4.52.0"
scipy = "^1.5.4"
igraph = "^0.10.4"
sklearn = "^0.0"
networkx = "^2.5"
GraphRicciCurvature = "0.5.2.1"
seaborn = "^0.11.1"
pyper = {git = "https://github.com/Pseudomanifold/pyper.git"}
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
